fixed note horizontal scrolling issue

--- a/client/src/styles/note-item.scss
+++ b/client/src/styles/note-item.scss
@@ -17,6 +17,8 @@
   .content-container{
     max-height: 25vh;
     overflow-y: auto;
+
+    word-wrap: break-word;
   }
 
   button{
